Fix benchmarks jvmArgsAppend suite logic