@@ -67,7 +67,7 @@ import org.openjdk.jmh.annotations.Warmup;
 @OutputTimeUnit(TimeUnit.MILLISECONDS)
 @Warmup(iterations = 5, time = 10, timeUnit = TimeUnit.SECONDS)
 @Measurement(iterations = 5, time = 10, timeUnit = TimeUnit.SECONDS)
-@Fork(value = 5)
+@Fork(value = 5, jvmArgsPrepend = "--enable-preview")
 @State(Scope.Benchmark)
 public class HolidayPlannerBenchmark {
 
